5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1107.log
== TEST (2019-04-24 13:53:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

---------
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution = 5:
	especific = "sexta"
else:
	especific = "sabado"
	

-- ERROR:
File "XXXX", line 7
    ---------
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:02:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution = 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	day = "domingo"
elif day == 1:
	day = "segunda"
elif day == 2:
	day = "terca"
elif day == 3:
	day = "quarta"
elif day == 4:
	day = "quinta"
elif day = 5:
	day = "sexta"
else:
	day = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
else:
	print("Hoje eh",day, "e o dia futuro eh ",especific)
	

-- ERROR:
File "XXXX", line 24
    elif solution = 5:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:02:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	day = "domingo"
elif day == 1:
	day = "segunda"
elif day == 2:
	day = "terca"
elif day == 3:
	day = "quarta"
elif day == 4:
	day = "quinta"
elif day = 5:
	day = "sexta"
else:
	day = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
else:
	print("Hoje eh",day, "e o dia futuro eh ",especific)
	

-- ERROR:
File "XXXX", line 39
    elif day = 5:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:02:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	day = "domingo"
elif day == 1:
	day = "segunda"
elif day == 2:
	day = "terca"
elif day == 3:
	day = "quarta"
elif day == 4:
	day = "quinta"
elif day == 5:
	day = "sexta"
else:
	day = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
else:
	print("Hoje eh",day, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:03:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dai = "domingo"
elif day == 1:
	dai = "segunda"
elif day == 2:
	dai = "terca"
elif day == 3:
	dai = "quarta"
elif day == 4:
	dai = "quinta"
elif day == 5:
	dai = "sexta"
else:
	dai = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:03:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dai = "domingo"
elif day == 1:
	dai = "segunda"
elif day == 2:
	dai = "terca"
elif day == 3:
	dai = "quarta"
elif day == 4:
	dai = "quinta"
elif day == 5:
	dai = "sexta"
else:
	dai = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:03:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dai = "domingo"
elif day == 1:
	dai = "segunda"
elif day == 2:
	dai = "terca"
elif day == 3:
	dai = "quarta"
elif day == 4:
	dai = "quinta"
elif day == 5:
	dai = "sexta"
else:
	dai = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:03:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dai = "domingo"
elif day == 1:
	dai = "segunda"
elif day == 2:
	dai = "terca"
elif day == 3:
	dai = "quarta"
elif day == 4:
	dai = "quinta"
elif day == 5:
	dai = "sexta"
else:
	dai = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- EXECUTION TIME:
0.142066
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1107/main.py", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:06:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- EXECUTION TIME:
0.145936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1107/main.py", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:06:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6)"))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:06:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
else:
	especific = "sabado"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if solution == 0:
NameError: name 'solution' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:07:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dai, "eh invalida")
else:
	print("Hoje eh",dai, "e o dia futuro eh ",especific)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 48, in <module>
    print("A entrada", dai, "eh invalida")
NameError: name 'dai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:08:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada 9 eh invalida
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:08:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada 9 eh invalida
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:09:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:09:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:10:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- EXECUTION TIME:
0.161702
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada sabado eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh  segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh ",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:10:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia futuros: "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- EXECUTION TIME:
0.153357
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada sabado eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:12:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia(s) futuro(s): "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:12:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia(s) futuro(s): "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", dia, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- OUTPUT:
A entrada sabado eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:13:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia(s) futuro(s): "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:13:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
day = int(input("dia: (0 a 6) "))
future = int(input("dia(s) futuro(s): "))

if (day < 0) or (day > 6):
	solution = 7
elif ((day + future) < 7):
	solution = day + future
else:
	solution = ((day + future) % 7)

if solution == 0:
	especific = "domingo"
elif solution == 1:
	especific = "segunda"
elif solution == 2:
	especific = "terca"
elif solution == 3:
	especific = "quarta"
elif solution == 4:
	especific = "quinta"
elif solution == 5:
	especific = "sexta"
elif solution == 6:
	especific = "sabado"
else:
	especific = "inexistente"
	
if day == 0:
	dia = "domingo"
elif day == 1:
	dia = "segunda"
elif day == 2:
	dia = "terca"
elif day == 3:
	dia = "quarta"
elif day == 4:
	dia = "quinta"
elif day == 5:
	dia = "sexta"
else:
	dia = "sabado"
	
if (day < 0) or (day > 6):
	print("A entrada", day, "eh invalida")
else:
	print("Hoje eh",dia, "e o dia futuro eh",especific)
	

-- EXECUTION TIME:
0.182582
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
